Fix single event display on mobile

--- a/themes/climatestrike/css/main.css
+++ b/themes/climatestrike/css/main.css
@@ -1009,9 +1009,15 @@ h6 {
 .post-type-climatestrike_event {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .post-type-climatestrike_event .events-list {
   width: 25%;
+}
+@media only screen and (max-width: 800px) {
+  .post-type-climatestrike_event .events-list {
+    width: 100%;
+  }
 }
 .post-type-climatestrike_event .events-list .tease-event {
   width: 100%;
