--- a/themes/climatestrike/scss/partials/4.components/partials/_climatestrike_event.scss
+++ b/themes/climatestrike/scss/partials/4.components/partials/_climatestrike_event.scss
@@ -1,9 +1,13 @@
 .post-type-climatestrike_event {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 
     .events-list {
         width: 25%;
+        @include respond(max-width, 800px) {
+            width: 100%;
+        }
 
         .tease-event {
             width: 100%;
